k8s/overlays/local/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalogo-web
spec:
  rules:
    - host: catalogo-web.local.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalogo-web
                port:
                  number: 80
